--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker build -t ajmason/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run ajmason/react-test npm test -- --coverage
+  - docker run -e CI=true ajmason/react-test npm test
 
 after_success:
   - docker build -t ajmason/multi-client ./client
