--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,15 @@ after_success:
   - docker push ajmason/multi-nginx
   - docker push ajmason/multi-server
   - docker push ajmason/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "Docker-React"
+  env: "MultiDocker-env"
+  bucket_name: "elasticbeanstalk-us-east-1-153475131564"
+  bucket_path: "MultiDocker"
+  on:
+    branch: master
+  access_key_id: "$AWS_ACCESS_KEY"
+  secret_access_key: "$AWS_SECRET_KEY"
